--- a/Analysis/Neutral_Model_Analysis/procedure/GCMP_Analysis_Spring2025.Rmd
+++ b/Analysis/Neutral_Model_Analysis/procedure/GCMP_Analysis_Spring2025.Rmd
@@ -19,39 +19,37 @@ knitr::opts_knit$set("C:/Users/Colin Howe/Desktop/PSU Doctoral Program/GCMP_Work
 ```{r, message=FALSE, warning=FALSE} 
 library(BiocManager)
 library(phyloseq)
-library(dplyr)
+library(tidyverse)
 library(qiime2R)
 library(DESeq2)
 library(ComplexHeatmap)
 library(ade4)
 library(vegan)
-library(tidyverse)
 library(ggplot2)
 library(microbiome)
 library(dendextend)
-library(gplots)
-library(tidyr)
 library(RVAideMemoire)
 library(ape)
-library(microbiomeMarker)
-library(paletteer)
 library(RColorBrewer)
 library(ggsignif)
+library(ANCOMBC)
+library(biomformat)
 ```
 
+
 # Import OTU Table Taxonomy and Tree from Qiime2 and import Metadata
-```{r}
+```{r,message=FALSE, warning=FALSE}
 #Import from .qza file into a phyloseq object
-asv <- qza_to_phyloseq(features = "./gcmp_qiime_input/merged_table.qza")
+asv <- qza_to_phyloseq(features = "./merged_table.qza")
 
 #### Import Metadata read.table
-metadata <- read.table(file = "./gcmp_qiime_input/gcmp_complete_mapping2025.txt",header=T,comment.char="", row.names=1, sep="\t")
+metadata <- read.table(file = "./gcmp_complete_mapping2025.txt",header=T,comment.char="", row.names=1, sep="\t")
 
 ### Import Tree file from biom output tree.nwk
-tree <- read_tree("gcmp_qiime_input/tree.nwk")
+tree <- read_tree("./tree.nwk")
 
 ### Import taxonomy from biom output as .tsv format using read.table
-taxonomy <- read.table(file = "gcmp_qiime_input/taxonomy.tsv", sep = "\t", header = T ,row.names = 1)
+taxonomy <- read.table(file = "./taxonomy.tsv", sep = "\t", header = T ,row.names = 1)
 
 # clean the taxonomy
 ##code referenced from Yan Hui: email me@yanh.org github: yanhui09
@@ -123,7 +121,7 @@ phylo
 
 # Subset only corals from database
 # Subset only corals from database
-subject <-subset_samples(phylo, outgroup == "n" & tissue_compartment == "S")
+subject <-subset_samples(phylo, outgroup == "n" & tissue_compartment == "T")
 subject
 
 print(paste("Generating Rarefied Coral dataset..."))
@@ -136,6 +134,7 @@ glom <- tax_glom(rarefied, taxrank = 'Family', NArm = TRUE)
 glom
 
 ```
+
 
 #Bruns et al. 2016 Neutral Model functions
 ```{r}
@@ -267,9 +266,6 @@ addf = function(freq, pred.upr, pred.lwr, padj) {
   else if(freq < pred.lwr){
     model = "below"
   }
-  else if(pred.upr >= freq & freq >= pred.lwr & padj < 0.05){
-    model = "neutral_significant"
-  }
   else if(pred.upr >= freq & freq >= pred.lwr){
     model = "neutral"
   }
@@ -305,20 +301,10 @@ neutral_results_padj$model = mapply(addf, neutral_results_padj$freq, neutral_res
 length(which(neutral_results_padj$model == "above"))
 length(which(neutral_results_padj$model == "below"))
 length(which(neutral_results_padj$model == "neutral"))
-length(which(neutral_results_padj$model == "neutral_significant"))
+
 
 neutral_results_padj$model <- factor(neutral_results_padj$model, 
-                             levels = c("above", "neutral", "below","neutral_significant"))
-
-## Assign Taxonomy to table of significant microbes
-phyloseq::tax_table(glom)%>%
-  as.data.frame() %>%
-  rownames_to_column("id") -> glom_tax
-
-inner_join(neutral_results_padj,glom_tax, by = "id") %>% as.data.frame() -> nonneutral_tax
-
-#coral_taxa
-write.csv(nonneutral_tax,"Merged Skeleton Neutral Taxonomy table.csv",row.names = TRUE)
+                             levels = c("above", "neutral", "below"))
 
 ################# seawater ####################
 set.seed(111)
@@ -344,7 +330,7 @@ mod1_w_seawater$model <- factor(mod1_w_seawater$model,
 ## Assign Taxonomy to table of significant microbes
 #env_taxa = cbind(as(mod1_w_seawater, "data.frame"), as(tax_table(glom_col12)[rownames(mod1_w_seawater), ], "matrix"))
 
-#write.csv(env_taxa,"Colombia E12 Samples Neutral Taxonomy table.csv",row.names = TRUE)
+#write.table(env_taxa,"Colombia E12 Samples Neutral Taxonomy table.tsv",row.names = TRUE)
 
 
 ```
@@ -352,13 +338,13 @@ mod1_w_seawater$model <- factor(mod1_w_seawater$model,
 ## Plot Neutral Model
 ```{r}
 #plot neuModel
-p_neuM_coral=ggplot(tissue_table, aes(x=log10(p), y=freq, color = model))+
+p_neuM_coral=ggplot(neutral_results_padj, aes(x=log10(p_abundance), y=freq, color = model))+
   geom_point(shape=19, alpha=0.7, size=2.5)+
-  geom_line(aes(x=log10(p), y=freq.pred),
+  geom_line(aes(x=log10(p_abundance), y=freq.pred),
             color="blue",linetype="solid",linewidth=1)+
-  geom_line(aes(x=log10(p), y=pred.lwr),
+  geom_line(aes(x=log10(p_abundance), y=pred.lwr),
             color="blue",linetype="dashed",linewidth=1)+
-  geom_line(aes(x=log10(p), y=pred.upr),
+  geom_line(aes(x=log10(p_abundance), y=pred.upr),
             color="blue",linetype="dashed",linewidth=1)+
     scale_colour_manual(name="OTUs",
                       values=c("#E41A1C", "#999999", "#FF7F00","purple"),
@@ -443,45 +429,167 @@ ggsave(" Caribbean_Mucus Neutral Model Plot.jpg", p_neuM_coral1, width = 20, hei
 
 ```
 
+## Psudo Tables 
+```{r}
+Tissue_glom_table <-read.table("./Tissue/T_glom_table.tsv",header=T, sep = "\t", check.names=FALSE)
+Tissue_glom_tax <-read.table("./Tissue/T_glom_taxonomy.tsv",header=T,sep = "\t", check.names=FALSE)
+
+Tissue_above_map <-read.table("./Tissue/Tissue_above_metadata.txt",header=T,sep = "\t", check.names=FALSE)
+Tissue_below_map <-read.table("./Tissue/Tissue_below_metadata.txt",header=T,sep = "\t", check.names=FALSE)
+Tissue_neutral_map <-read.table("./Tissue/Tissue_neutral_metadata.txt",header=T,sep = "\t", check.names=FALSE)
+
+rbind(Tissue_above_map,Tissue_below_map,Tissue_neutral_map) -> test_map
+
+## Subset feature table
+#phyloseq::otu_table(glom)%>%
+#  as.data.frame()%>%
+#  rownames_to_column("id") -> Tissue_glom_table
+
+## Subet taxonomy table
+#phyloseq::tax_table(glom)%>%
+#  as.data.frame() %>%
+#  rownames_to_column("id") -> Tissue_glom_tax
+
+## Subet Mapping file
+#phyloseq::sample_data(glom) %>% as.data.frame() -> Tissue_glom_mapping
+
+
+biosample="Tissue"
+# Subset Taxonomy and join with neutral model results
+neutral = c("above","below")
+for (b in neutral){
+## Inner_join will connect  ASV id with taxonomy using id column
+inner_join(neutral_results_padj,Tissue_glom_tax, by = "id") -> non_neutral_tax
+
+## Subset ASV from each model and signifcance 
+sig_neutral_tax = select(filter(non_neutral_tax, model == b & padj <=0.05),id,p_abundance,freq,padj,Phylum,Class,Order,Family,model)
+
+#subset otu table based on neutral results and rename column names
+neutral_table <-subset(Tissue_glom_table, id  %in%  sig_neutral_tax$id)
+l = length(neutral_table)
+colnames(neutral_table)[2:l] <- paste(colnames(neutral_table)[2:l], b, sep = "_")
+
+## Create new columns for the metadata data
+T_glom_mapping %>% mutate(psuedo_sample_name = paste(colnames(neutral_table)[2:l]),
+                         compartment_neutraility = paste(biosample,b, sep = '_'),
+                         compartment = paste (biosample),
+                         neutraility = paste(b)) %>% 
+                        select(psuedo_sample_name,sample_name_backup, host_scientific_name,expedition_number,political_area,ocean_area,compartment_neutraility,compartment,neutraility) %>% 
+                        as.data.frame() -> glom_metadata
+## Subset significant results with taxonomy to retain only significant taxonomy
+#subset_tax <- subset(Tissue_glom_tax, id %in% sig_neutral_tax$id)# %>% select(-c("Genus","Species"))
+
+psuedo_table_name <- paste0(biosample,"_",b,"_table.tsv")
+  (write.table(neutral_table, file =psuedo_table_name,sep="\t", row.names = FALSE))
+  
+psuedo_map_name <- paste0(biosample,"_",b,"_metadata.csv") ## remember to combine above, below and neutral in excel
+  (write.table(glom_metadata, file =psuedo_map_name,sep=",", row.names = FALSE))
+  
+# psuedo_tax_name <- paste0(biosample,"_",b,"_taxonomy.tsv")
+#  (write.table(subset_tax, file =psuedo_tax_name,sep="\t", row.names = FALSE))
+}
+
+################## Subset ASV for the neutral taxa ####################
+sig_neutral_ref = select(filter(non_neutral_tax, model == "neutral" & padj >=0.05),id,p_abundance,freq,padj,Phylum,Class,Order,Family,model)
+
+#subset otu table based on neutral results and rename column names
+neutral_table_test <-subset(Tissue_glom_table, id  %in%  sig_neutral_ref$id)
+l = length(neutral_table_test)
+colnames(neutral_table_test)[2:l] <- paste(colnames(neutral_table_test)[2:l], "neutral", sep = "_")
+
+
+### Write neutral tables and mapping file
+neutral_table_name <- paste0(biosample,"_neutral_table.tsv")
+  (write.table(neutral_table_test, file =neutral_table_name,sep="\t", row.names = FALSE))
+  
+#neutral_map_name <- paste0(biosample,"_neutral_metadata.csv") ## remember to combine above, below and neutral in excel
+#  (write.table(neutral_map_name, file =psuedo_map_name,sep=",", row.names = FALSE))
+
+## Merging above and Below tables for phyloseq object
+
+above_table <- read.table("./Tissue_above_table.tsv",header = TRUE,sep="\t", check.names=FALSE)
+below_table <- read.table("./Tissue_below_table.tsv",header = TRUE,sep="\t", check.names=FALSE)
+neutral_table <-read.table("./Tissue_neutral_table.tsv",header = TRUE,sep="\t", check.names=FALSE)
+
+### Merge above and below tables
+merge(above_table, below_table, by=0,all=T) -> merge_table
+
+merge_table %>% mutate(id = coalesce(id.x,id.y)) %>% 
+    relocate(id) %>%  
+  select(!c(id.x,id.y,Row.names))-> merge_test
+merge_test[is.na(merge_test)] <-0
+
+
+
+## Merge with above and below tables
+merge(merge_test,neutral_table_test,by=0,all=T) -> full_table
+full_table %>% mutate(id = coalesce(id.x,id.y)) %>% 
+    relocate(id) %>%  
+  select(!c(id.x,id.y,Row.names))-> full_table
+full_table[is.na(full_table)] <-0
+
+#write.table(full_table,file = "merged_table_test.txt", sep="\t",row.names = FALSE)
+#test_biom <-make_biom(merge_test) ## unknown biom format makes this difficult to import into qiime2
+#write_biom(test_biom,biom_file = "tissue_above_biom")
+
+l = length(neutral_table_test)
+T_glom_mapping %>% mutate(psuedo_sample_name = paste(colnames(neutral_table_test)[2:l]),
+                         compartment_neutraility = paste("Tissue", "neutral", sep = '_'),
+                         compartment = paste ("Tissue"),
+                         neutraility = paste("neutral")) %>% 
+                        select(psuedo_sample_name,sample_name_backup, host_scientific_name,expedition_number,political_area,ocean_area,compartment_neutraility,compartment,neutraility) %>% 
+                        as.data.frame() -> glom_metadata
+
+## Subset taxonomy file 
+taxonomy2 <- read.table(file = "gcmp_qiime_input/taxonomy.tsv", sep = "\t", header = T)
+colnames(taxonomy2)[1] <-"id"
+neutral_tax <-subset(taxonomy2, id  %in%  full_table$id)
+
+## Print output files
+print(paste("Writing Combined Psudo_table across compartments"))
+psudo_table_name <- paste0(biosample,"_combined_psudo_table.tsv")
+write.table(merge_tab, file=psudo_table_name, sep="\t",row.names = FALSE)
+
+
+
+```
+
 ## Neutral Phyloseq Object      
 ```{r}
-## Subset glom OTU table
-phyloseq::otu_table(glom)%>%
-        as.data.frame()%>%
-        rownames_to_column("id") -> glom_otu_table
+## ancombc analysis
+library(ANCOMBC)
 
-## Subset glom tax table
-phyloseq::tax_table(glom)%>%
-        as.data.frame()%>%
-        rownames_to_column("id") -> glom_otu_tax
+#Mucus
+mucus_table <-read.table("./Mucus/mucus_combined_psudo_table.tsv",header=T,sep="\t",check.names=FALSE)
+mucus_tax <-read.table("./Mucus/Mucus_combined_psudo_tax.tsv", header=T,sep="\t",check.names=FALSE)
+mucus_mapping <-read.table("./Mucus/Mucus_combined_mapping.csv", header=T,sep=",", check.names=FALSE)
 
-## I need to create a metadata file for these samples using the neutral_fam_df as the new metadata. The sampleID can be the ASV names and 
+#Tissue
+tissue_table <-read.table("./Tissue/Tissue_combined_psudo_table.tsv",row.names=1,header=T,sep="\t",  check.names=FALSE)
+tissue_tax <-read.table("./Tissue/Tissue_combined_psudo_tax.tsv",header=T,sep="\t", check.names=FALSE)
+tissue_mapping <-read.table("./Tissue/Tissue_combined_mapping.csv",header=T,sep=",",  check.names=FALSE)
 
+#Skeleton
+skeleton_table <-read.table("./Skeleton/Skeleton_combined_psudo_table.tsv",header=T,sep="\t",  check.names=FALSE)
+skeleton_tax <-read.table("./Skeleton/Skeleton_combined_psudo_tax.tsv",header=T,sep="\t",  check.names=FALSE)
+skeleton_mapping <-read.table("./Skeleton/Skeleton_combined_mapping.csv", sep=",", check.names=FALSE)
 
-# Select and filter significant taxa and important categories 
-neutral_fam_df <- select(filter(nonneutral_tax, padj <=0.05),id,Kingdom,Phylum,Class,Order,Family,model,padj)
+## format import files 
+mucus_table <- as.data.frame(mucus_table)
+class(mucus_table) <- "numeric"
+as.numeric(mucus_table)
+# taxa 
 
-inner_join(nonneutral_tax,glom_otu_table, by = "id") -> neutral_table_tax
-
-nonneutral_tax
-#subset otu table based on neutral results
-neutral_table <-subset(glom_otu_table, id  %in%  neutral_fam_df$id)
-
-#subset taxonomy table based on neutral results
-neutral_tax <- subset(glom_otu_tax, id  %in%  neutral_fam_df$id)# & Family %in% neutral_fam_df$Family)
-
-#subset Metadata based on neutral results
-neutral_sample_name <- colnames(neutral_table)
-neutral_meta <-subset(glom_metadata,sample_name_backup %in% neutral_sample_name)
-neutral_metadata <- sample_data(neutral_fam_df)
 
 # create matrix format for OTU and taxonomy table
-OTU2 <- otu_table(data.matrix(neutral_table, rownames.force = NA), taxa_are_rows = TRUE)
-tax2 = tax_table(as.matrix(neutral_tax))
+MOTU <- otu_table(as.matrix(mucus_table), taxa_are_rows = FALSE)
+Mtax1 = tax_table(as.matrix(mucus_tax))
+
+# Set metadata
+MSAMPLE <- sample_data(mucus_mapping)
 
 # Create Working phyloseq object
-neutral_phylo <- phyloseq(OTU2,tax2,neutral_metadata)
-
+neutral_phylo <- phyloseq(MOTU,Mtax1,MSAMPLE,tree)
 neutral_phylo
 
 
@@ -491,14 +599,14 @@ neutral_phylo
 ```{r}
 knitr::opts_knit$set(root.dir = 'C:/Users/Colin Howe/Desktop/PSU Doctoral Program/GCMP_Working/gcmp_analysis_2024/Neutral Model Analysis')
 remove(results_table)
-results_table <- read.table(file = "gcmp_qiime_input/neutral_results_table.csv",header=T,comment.char="",sep=",")
+results_table <- read.table(file = "./neutral_results_table.txt",header=T,comment.char="",sep="\t")
 
 compartment = results_table$Compartment
 as.character(compartment)
 ocean = results_table$Ocean
 region = results_table$Region
 Rsquared = results_table$R2
-faith = results_table$Faith.PD
+faith = results_table$Coral_Host_Faiths_PD
 faithsr = results_table$Faiths.SR
 n_samples = results_table$n_samples
 region = factor(results_table$Region)
@@ -506,6 +614,19 @@ below = results_table$n_belowMean
 above = results_table$n_aboveMean
 expedition = results_table$expedition
 migration = results_table$m
+
+compartment <- factor(compartment, 
+                             levels = c("Mucus", "Tissue", "Skeleton"))
+
+## Migration seems to vary significantly by expedition and host species diversity (aka habitat heterogeneous selection) but not compartments. Regional differences had less variation in migration compared to the host species diversity which has a lot of variance in migration rate with less migration in more diverse regions. A follow up would be to see if any additional regional characteristics such as temperature, algal cover etc has a linear relationship to migration.
+
+category_migration_test <- lm(migration ~ expedition+compartment+faith)
+summary(category_migration_test)
+
+## R2 seems to vary significantly by compartment and by expedition. Compartment shows stronger structure of coral microbiome community composition. 
+## Migration across compartments seems to be even but neutrality across compartments are not the same. What does this mean about how these communities are structured? Try another approach to identify if the variance in migration and R2 is greater across compartments or regions. 
+category_Rquared_test <- lm(Rsquared ~ expedition+compartment+faith)
+summary(category_Rquared_test) 
 
 category_migration_test <- lm(migration ~ compartment+region+faith+faithsr+ocean)
 summary(category_migration_test)
@@ -582,9 +703,9 @@ clean_comm <- match.phylo.comm(phy = coral_tree, comm = test_matrix)$comm
 coral_faith_pd <- pd(clean_comm, clean_tree, include.root=TRUE)
 coral_faithpd_reorded <-coral_faith_pd[order(coral_faith_pd$PD, decreasing=TRUE),] 
 
-write.table(microbial_faith, file ="./carib_mucus_microbial_faith_pd_table.csv", sep = ",",col.names = TRUE)
+write.table(microbial_faith, file ="./carib_mucus_microbial_faith_pd_table.tsv", sep = ",",col.names = TRUE)
 
-write.csv(coral_faithpd_reorded, file ="./carib_mucus_Host_faith_pd_table.csv" ,row.names = TRUE)
+write.tsv(coral_faithpd_reorded, file ="./carib_mucus_Host_faith_pd_table.tsv" ,sep = ",",row.names = TRUE)
 ```
 
 # BAR PLOTS: Coral Compartments
@@ -592,10 +713,11 @@ write.csv(coral_faithpd_reorded, file ="./carib_mucus_Host_faith_pd_table.csv" ,
 
 ##import neutral Model results tables
 
-tissue_table <- read.table(file ="gcmp_qiime_input/Tissue_neutral_model.csv",header=T,comment.char="", row.names=1, sep=",")
-mucus_table <- read.table(file ="gcmp_qiime_input/Mucus_nuetral_model.csv",header=T,comment.char="", row.names=1, sep=",")
-skeleton_table <- read.table(file ="gcmp_qiime_input/Skeleton_nuetral_model.csv",header=T,comment.char="", row.names=1, sep=",")
-combined_table <- read.table(file ="gcmp_qiime_input/combined_neutral_table.csv",header=T,comment.char="", row.names=1, sep=",")
+tissue_table <- read.table(file ="gcmp_qiime_input/Tissue_neutral_model.tsv",header=T,comment.char="", row.names=1, sep=",")
+mucus_table <- read.table(file ="gcmp_qiime_input/Mucus_neutral_model.tsv",header=T,comment.char="", row.names=1, sep=",")
+skeleton_table <- read.table(file ="gcmp_qiime_input/Skeleton_neutral_model.tsv",header=T,comment.char="", row.names=1, sep=",")
+combined_table <- read.table(file ="gcmp_qiime_input/combined_neutral_table.tsv",header=T,comment.char="", row.names=1, sep=",")
+
 sig_tissue <-filter(tissue_table, padj <=0.05)
 sig_skeleton <-filter(skeleton_table, padj <=0.05)
 sig_mucus <-filter(mucus_table, padj <=0.05)
@@ -609,8 +731,12 @@ filter(sig_combined, Phylum == "Proteobacteria") %>%
 many_col <- c("#A6CEE3", "#33A02C","#E7298A","#FDBF6F", "#B2DF8A", "#1F78B4","#E31A1C","#6A3D9A", "#FF7F00","#1B9E77","#B15928", "#FB9A99", "#CAB2D6", "#377EB8","#D95F02", "#7570B3","#FFFF99","#666666" ,"#66A61E", "#E6AB02","#A6761D","black", "#CAB2D6",  "#B15928","#FFFF99", "#D95F02", "#E7298A", "#7570B3","#666666" , "#E6AB02", "brown3","#A6761D", "#377EB8", "#4DAF4A" ,"#984EA3", "#FFFF33","#FF7F00","cyan3", "#4DAF4A" ,"#FF7F00","#984EA3", "#A65628","#1B9E77", "#F781BF", "#F46D43","#ABDDA4", "#FDAE61","black", "#FEE08B","#E6F598","#3288BD","deeppink","#66C2A5","cyan1","red3", "#E69F00","#56B4E9","#999999","#F0E442","#0072B2","#D55E00","#D53E4F","yellow","skyblue","coral4","#A6CEE3","white","darkkhaki","brown1","#FFFF33","chocolate","darkorchid2","#FF7F00","#1B9E77","#66A61E","#FDBF6F", "#FB9A99","#A6CEE3", "#33A02C","#E7298A","#FDBF6F", "#B2DF8A", "#1F78B4","#E31A1C","#6A3D9A", "#FF7F00","#1B9E77","#B15928", "#FB9A99", "#CAB2D6", "#377EB8","#D95F02", "#7570B3","#FFFF99","#666666" ,"#66A61E", "#E6AB02")
 
 
-proto_bar <- ggplot(data = protobacteria, aes(x = model, y = p, fill = Order)) +
-         geom_bar(stat = "identity", position="stack") + 
+proto_bar <- ggplot(data = protobacteria, aes(x = model, y = Order,size=p,color = Order)) +
+         geom_point() + scale_color_manual(values = c(many_col))+ theme_minimal()+labs( x=" family", y="average relative abundance (p)") + guides(color="none")+ ggtitle("Non-Neutral Proteobacteria Bargraph") + theme(plot.title = element_text(hjust = 0.5))
+
+
+
+ 
   facet_wrap(~sample_type, scales= "free_x", nrow=1) +
   labs( x=" family", y="average relative abundance (p)") + guides(fill = guide_legend(title = "Order"))+ ggtitle("Non-Neutral Proteobacteria Bargraph") + scale_fill_manual(name=NULL, values = c(many_col)) 
 
@@ -636,32 +762,14 @@ skeleton_bar <- ggplot(data = sig_skeleton, aes(x = model, y = p, fill = Phylum)
 
 # Calculate DISTANCE MATRICES
 ```{r}
-## Flavobacteriaceae & Cyclobacteriaceae seems to be the most frequent and abundant between Pamana east & West
-## Found Across Ofav samples in Colombia E5: Order: Halanaerobiales Family: Halanaerobiaceae
-## Lastly, I looked at Endozoicomonadaceae
-## Colombia Neutral Model shows Actinomarinaceae high relative abundance but low frequency
+## Mucus
 
-carib <-subset_samples(phylo_coral, ocean_area == "Caribbean" & coral_group == "yes")
-flavo <- subset_taxa(colombia, Family=="Actinomarinaceae")
-flavo_prune = prune_samples(sample_sums(flavo)>1, flavo)
-
-#glom_flavo <-tax_glom(flavo, taxrank = 'Genus', NArm = TRUE)
-
-## Complex Corals 
-bray_flavo = phyloseq::distance(flavo_prune, method="bray")
-uni_flavo = phyloseq::distance(flavo_prune, method="unifrac")
-wuni_flavo= phyloseq::distance(flavo_prune, method="wUnifrac")
+bray_muc = phyloseq::distance(clean_mucus, method="bray")
+uni_muc = phyloseq::distance(clean_mucus, method="unifrac")
+wuni_muc= phyloseq::distance(clean_mucus, method="wUnifrac")
 
 # Create data frame for downstream analysis
-flavo_dd <- data.frame(sample_data(flavo))
-
-## Robust Corals 
-bray_robust = phyloseq::distance(robust.rarefied, method="bray")
-uni_robust = phyloseq::distance(robust.rarefied, method="unifrac")
-wuni_robust = phyloseq::distance(robust.rarefied, method="wUnifrac")
-
-# Create data frame for downstream analysis
-rob_df <- data.frame(sample_data(robust.rarefied))
+muc_df <- data.frame(sample_data(clean_mucus))
 
 
 ```
@@ -669,11 +777,11 @@ rob_df <- data.frame(sample_data(robust.rarefied))
 # Ordination from Distance Matrix and PCoA Plots 
 ```{r}
 ##Calculate the PCoA on Complex Corals
-rt.pcoa = ordinate(flavo, method="PCoA", distance=uni_flavo)
+rt.pcoa = ordinate(mucus_phylo, method="PCoA", distance=uni_muc)
 # Set variables to zero for subsequent changes
 #Ofra
 pcoa<-0
-pcoa <- plot_ordination(flavo, rt.pcoa,  shape = "BiologicalMatter",color="family")+  geom_point(size=3) + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + stat_ellipse(level = 0.95,type = "norm",aes(group=family))+ theme(legend.text=element_text(size=12)) + theme(axis.text=element_text(size=12, face = "bold"), axis.title=element_text(size=14,face="bold") + theme(text = element_text(size = 20,face = "bold"))) # title =expression(paste(italic(" Orbicella spp")," Bray-Curtis Distance PCoA across Depth")) scale_color_manual(values=c("#E31A1C","#1F78B4"))+
+pcoa <- plot_ordination(mucus_phylo, rt.pcoa ,color="model")+  geom_point(size=3) + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + stat_ellipse(level = 0.95,type = "norm",aes(group=model))+ theme(legend.text=element_text(size=12)) + theme(axis.text=element_text(size=12, face = "bold"), axis.title=element_text(size=14,face="bold") + theme(text = element_text(size = 20,face = "bold"))) # title =expression(paste(italic(" Orbicella spp")," Bray-Curtis Distance PCoA across Depth")) scale_color_manual(values=c("#E31A1C","#1F78B4"))+
                       
 
 ```
@@ -694,14 +802,14 @@ complex_diversity_compartment <- plot_richness(complex, x="family", color = "Gen
 ```{r}
 
 #env material include mucus, tissue and skeleton, and outgroups without eDNA
-distance_methods <-c("bray_coral","wuni_coral","uni_coral")
+distance_methods <-c("bray_muc","wuni_muc","uni_muc")
 set.seed(129)
 
 # This is what is called a for loop.        
 for (i in distance_methods){ 
-  form <- as.formula(paste(i,"country_region+family+BiologicalMatter+sequence_run", sep="~"))
+  form <- as.formula(paste(i,"model", sep="~"))
   print(form)
- adonis2(form, data=coral_df)-> result
+ adonis2(form, data=muc_df)-> result
  print(result)
 }
  
@@ -744,5 +852,180 @@ dend %>% set("leaves_pch", 15) %>%
   plot(main = "Caribbean Actinomarinaceae Dendrogram",
   horiz =  FALSE,  nodePar = list(cex = 0.01))
 
+
+```
+## Parking lot
+```{r}
+## Subset glom OTU table
+phyloseq::otu_table(glom)%>%
+        as.data.frame()%>%
+        rownames_to_column("id") -> glom_otu_table
+
+## Subset glom tax table
+phyloseq::tax_table(glom)%>%
+        as.data.frame()%>%
+        rownames_to_column("id") -> glom_otu_tax
+
+## Subset glom tax table
+phyloseq::sample_data(glom)%>%
+        as.data.frame() -> glom_metadata
+
+# Connnect taxonomy information to neutral  model results
+inner_join(neutral_results_padj,glom_tax, by = "id") %>% as.data.frame() -> nonneutral_tax
+
+
+#subset otu table based on neutral results
+neutral_table <-subset(glom_otu_table, id  %in%  neutral_fam_df$id)
+
+#subset taxonomy table based on neutral results
+neutral_tax <- subset(glom_otu_tax, id  %in%  neutral_fam_df$id)# & Family %in% neutral_fam_df$Family)
+
+#subset Metadata based on neutral results
+neutral_sample_name <- colnames(neutral_table)
+neutral_meta <-subset(glom_metadata,sample_name_backup %in% neutral_sample_name)
+neutral_metadata <- sample_data(neutral_meta)
+
+## This approch helps transpose the data without adding numbers as colummn id
+test_table <- setNames(data.frame(t(glom_otu_table[,-1])),glom_otu_table[,1])
+
+# create matrix format for OTU and taxonomy table
+OTU2 <- otu_table(data.matrix(test_table, rownames.force = NA), taxa_are_rows = TRUE)
+tax2 = tax_table(as.matrix(neutral_tax))
+
+# Create Working phyloseq object
+neutral_phylo <- phyloseq(OTU2,tax2,neutral_metadata)
+
+neutral_phylo
+
+############################# Glom Psudo Tables ##############################################################
+
+########### Redo for neutral without filtering for  significant padj ########
+phyloseq::tax_table(glom) %>%
+  as.data.frame() %>% 
+  rownames_to_column("id") -> Tissue_glom_tax
+
+## Inner_join will connect  ASV id with taxonomy using id column
+inner_join(neutral_results_padj,Tissue_glom_tax, by = "id") -> non_neutral_tax
+
+## Subset ASV from each model and signifcance 
+sig_neutral_tax = select(filter(non_neutral_tax, model == "neutral"),id,p_abundance,freq,padj,Phylum,Class,Order,Family,model)
+
+## Subset glom OTU table
+phyloseq::otu_table(glom)%>%
+        as.data.frame()%>%
+        rownames_to_column("id") -> glom_otu_table
+
+##subset otu table based on neutral results and rename column names
+neutral_table <-subset(glom_otu_table, id  %in%  sig_neutral_tax$id)
+n <-length(neutral_table)
+colnames(neutral_table)[2:n] <- paste(colnames(neutral_table)[2:n], "neutral", sep = "_")
+
+## Subset metadata file
+data.frame(sample_data(glom)) %>% select(sample_name_backup, expedition_number,host_scientific_name) %>% as.data.frame() -> glom_meta
+
+## Create new columns for the metadata data
+glom_meta %>% mutate(psuedo_sample_name = paste(colnames(neutral_table)[2:n]),
+                         compartment_neutraility = paste("Tissue", "neutral", sep = '_'),
+                         compartment = paste ("Tissue"),
+                         neutraility = paste("neutral")) %>% 
+                         as.data.frame() -> glom_metadata
+
+psuedo_table_name <- paste0("Tissue","_","neutral_table.csv")
+(write.csv(neutral_table, file =psuedo_table_name, row.names = FALSE))
+
+psuedo_map_name <- paste0("Tissue","_","neutral_metadata.csv")
+(write.csv(glom_metadata, file =psuedo_map_name, row.names = FALSE))
+
+psuedo_tax_name <- paste0("Tissue","_","neutral_taxonomy.csv")
+(write.csv(subset_tax, file =psuedo_tax_name, row.names = FALSE))
+# Subset Taxonomy and join with neutral model results
+neutral = c("above","below")
+for (i in neutral){
+phyloseq::tax_table(glom) %>%
+  as.data.frame() %>% 
+  rownames_to_column("id") -> glom_tax
+## Inner_join will connect  ASV id with taxonomy using id column
+inner_join(neutral_results_padj,glom_tax, by = "id") -> non_neutral_tax
+
+## Subset ASV from each model and signifcance 
+sig_neutral_tax = select(filter(non_neutral_tax, model == i & padj <=0.05),id,p_abundance,freq,padj,Phylum,Class,Order,Family,model)
+
+## Subset glom OTU table
+phyloseq::otu_table(glom)%>%
+        as.data.frame()%>%
+        rownames_to_column("id") -> glom_otu_table
+
+#subset otu table based on neutral results and rename column names
+neutral_table <-subset(glom_otu_table, id  %in%  sig_neutral_tax$id)
+l = length(neutral_table)
+colnames(neutral_table)[2:l] <- paste(colnames(neutral_table)[2:l], i, sep = "_")
+
+## Subset metadata file
+data.frame(sample_data(glom)) %>% select(sample_name_backup, expedition_number,host_scientific_name) %>% as.data.frame() -> glom_meta
+## Create new columns for the metadata data
+glom_meta %>% mutate(psuedo_sample_name = paste(colnames(neutral_table)[2:299]),
+                         compartment_neutraility = paste("mucus", i, sep = '_'),
+                         compartment = paste ("mucus"),
+                         neutraility = paste(i)) %>% 
+                         as.data.frame() -> glom_metadata
+
+## Subset significant results with taxonomy to retain only significant taxonomy
+subset_tax <- subset(glom_tax, id %in% sig_neutral_tax$id) %>% 
+  select(-c("Genus","Species"))
+
+psuedo_table_name <- paste0("mucus","_",i,"_table.tsv")
+(write.table(neutral_table, file =psuedo_table_name, row.names = FALSE))
+
+psuedo_map_name <- paste0("mucus","_",i,"_metadata.tsv")
+(write.table(glom_metadata, file =psuedo_map_name, row.names = FALSE))
+
+psuedo_tax_name <- paste0("mucus","_",i,"_taxonomy.tsv")
+(write.table(subset_tax, file =psuedo_tax_name, row.names = FALSE))
+
+}
+
+########### Redo for neutral without filtering for  significant padj ########
+phyloseq::tax_table(glom) %>%
+  as.data.frame() %>% 
+  rownames_to_column("id") -> glom_tax
+
+## Inner_join will connect  ASV id with taxonomy using id column
+inner_join(neutral_results_padj,glom_tax, by = "id") -> non_neutral_tax
+
+## Subset ASV from each model and signifcance 
+sig_neutral_tax = select(filter(non_neutral_tax, model == "neutral"),id,p_abundance,freq,padj,Phylum,Class,Order,Family,model)
+
+## Subset glom OTU table
+phyloseq::otu_table(glom)%>%
+        as.data.frame()%>%
+        rownames_to_column("id") -> glom_otu_table
+
+##subset otu table based on neutral results and rename column names
+neutral_table <-subset(glom_otu_table, id  %in%  sig_neutral_tax$id)
+colnames(neutral_table)[2:299] <- paste(colnames(neutral_table)[2:299], "neutral", sep = "_")
+
+## Subset metadata file
+data.frame(sample_data(glom)) %>% select(sample_name_backup, expedition_number,host_scientific_name) %>% as.data.frame() -> glom_meta
+
+## Create new columns for the metadata data
+glom_meta %>% mutate(psuedo_sample_name = paste(colnames(neutral_table)[2:299]),
+                         compartment_neutraility = paste("mucus", "neutral", sep = '_'),
+                         compartment = paste ("mucus"),
+                         neutraility = paste("neutral")) %>% 
+                         as.data.frame() -> glom_metadata
+
+psuedo_table_name <- paste0("mucus","_","neutral_table.tsv")
+(write.table(neutral_table, file =psuedo_table_name, row.names = FALSE))
+
+psuedo_map_name <- paste0("mucus","_","neutral_metadata.tsv")
+(write.table(glom_metadata, file =psuedo_map_name, row.names = FALSE))
+
+psuedo_tax_name <- paste0("mucus","_","neutral_taxonomy.tsv")
+(write.table(subset_tax, file =psuedo_tax_name, row.names = FALSE))
+
+
+
+
+```
 
 ```
